--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="col-lg-6">
                   <h1>Organic Fruits</h1>
-                  <p>Choose from a wide variety of options.</p>
+                  <p>Let's choose from a wide variety of options</p>
                   <button>Get Started</button>
                 </div>
                 <div class="col-lg-6">
