--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</header>
 		
 		<div id="main-text">
-			<h1>Welcome to Our Landing Page</h1>
+			<h1>WELCOME TO OUR LANDING PAGE</h1>
 			<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
 		</div>
 		
