--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Welcome</title>
+	<title>WELCOME</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width , initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="reset.css">
@@ -16,7 +16,7 @@
 		
 		<div id="main-text">
 			<h1>WELCOME TO OUR LANDING PAGE</h1>
-			<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+			<h4>Making minor changes in the file.</h4>
 		</div>
 		
 		<div id="sub-1">
